--- a/frontend/android/gradle.properties
+++ b/frontend/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.37.0
+
+MYAPP_RELEASE_STORE_FILE=rotaract.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=187059
+MYAPP_RELEASE_KEY_PASSWORD=187059
